// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SuggestionsListItem /> when isSelected=false renders as expected 1`] = `
<div
  className=
      y-suggestions-list-item
      y-hc-select-on-hover
      y-hc-suppress-text-background
      {
        cursor: pointer;
        padding-bottom: 0.8rem;
        padding-left: 1.2rem;
        padding-right: 1.2rem;
        padding-top: 0.4rem;
      }
      &:hover {
        background-color: #f3f5f8;
      }
  onMouseDown={[Function]}
  role="button"
>
  <MediaObject
    imageContent={
      <Avatar
        imageUrl="imageUrl"
        name="John Smith"
        size="small"
      />
    }
    metadataContent="Software Engineer"
    size="small"
    titleContent={
      Array [
        <span
          className=

              {
                font-weight: 600;
              }
        >
          Joh
        </span>,
        <span>
          n Smith
        </span>,
      ]
    }
  />
</div>
`;

exports[`<SuggestionsListItem /> when isSelected=true renders as expected 1`] = `
<div
  className=
      y-suggestions-list-item
      y-hc-select-on-hover
      y-hc-suppress-text-background
      y-hc-selected
      {
        background-color: #edeff2;
        cursor: pointer;
        padding-bottom: 0.8rem;
        padding-left: 1.2rem;
        padding-right: 1.2rem;
        padding-top: 0.4rem;
      }
      &:hover {
        background-color: #f3f5f8;
      }
  onMouseDown={[Function]}
  role="button"
>
  <MediaObject
    imageContent={
      <Avatar
        imageUrl="imageUrl"
        name="John Smith"
        size="small"
      />
    }
    metadataContent="Software Engineer"
    size="small"
    titleContent={
      Array [
        <span
          className=

              {
                font-weight: 600;
              }
        >
          Joh
        </span>,
        <span>
          n Smith
        </span>,
      ]
    }
  />
</div>
`;

exports[`<SuggestionsListItem /> with avatarProps renders as expected 1`] = `
<div
  className=
      y-suggestions-list-item
      y-hc-select-on-hover
      y-hc-suppress-text-background
      {
        cursor: pointer;
        padding-bottom: 0.8rem;
        padding-left: 1.2rem;
        padding-right: 1.2rem;
        padding-top: 0.4rem;
      }
      &:hover {
        background-color: #f3f5f8;
      }
  onMouseDown={[Function]}
  role="button"
>
  <MediaObject
    imageContent={
      <Avatar
        borderType="soft"
        imageUrl="imageUrl"
        name="John Smith"
        size="small"
      />
    }
    metadataContent="Software Engineer"
    size="small"
    titleContent={
      Array [
        <span
          className=

              {
                font-weight: 600;
              }
        >
          Joh
        </span>,
        <span>
          n Smith
        </span>,
      ]
    }
  />
</div>
`;
